update validation. Add updateChore logic
