# controllers/validation/index.js
@@ -1,6 +1,6 @@
-const choreSchema = require('./chore')
+const { choreSchema, newChoreSchema } = require('./chore')
 const choreCollectionSchema = require('./choreCollection')
 const userSchema = require('./user')
 const { idSchema, idArraySchema } = require('./id')
 
-module.exports = { choreSchema, choreCollectionSchema, idArraySchema, idSchema, userSchema }
+module.exports = { choreSchema, choreCollectionSchema, idArraySchema, idSchema, newChoreSchema, userSchema }
